# DFTV2

./: CMakeLists.txt  MY_DFT.cpp  MY_DFT.h  main.cpp
